--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <nav>
             <ul>
                 <li><a href="#"> О нас</a></li>
+                <li><a href = "enter.html"> Вход</a></li>
                 <li><a href="#"> Услуги</a></li>
                 <li><a href="#"> Галерея</a></li>
                 <li><a href="#"> Отзывы</a></li>
+                <li><a href="feedback.html"> Обратная связь</a></li>
             </ul>
         </nav>
     </header>
