--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SvyatAuto</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.google.com/specimen/Roboto" />
+    <link rel="stylesheet" type="text/css" href="print.css" media="print">
 </head>
 <body>
     <header>
